# 1c-selection-astar

./: .gitignore  CMakeLists.txt  README.md  solution.cpp
include/: a_star.hpp  game.hpp  hint.hpp  state.hpp
src/: .gitignore  a_star.cpp  game.cpp  state.cpp
